--- a/thymeleaf/src/main/resources/templates/thymeleaf2.html
+++ b/thymeleaf/src/main/resources/templates/thymeleaf2.html
@@ -6,6 +6,6 @@
 <title>ThymeleafHello</title>
 </head>
 <body>
-	<h1 th:text="'Helloooo ' + ${name}"></h1>
+	<h1 th:text="'Hello ' + ${name}">Hello</h1>
 </body>
 </html>
