--- a/week2/src/main/resources/templates/hello.html
+++ b/week2/src/main/resources/templates/hello.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>ThymeleafHello</title>
+<title>Thymeleaf Model and View</title>
 </head>
 <body>
 	<h1 th:text="'Helloooo ' + ${name}"></h1>
