Second week exercises completed

--- a/AgeCheck/src/main/resources/templates/hello.html
+++ b/AgeCheck/src/main/resources/templates/hello.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Thymeleaf Model and View</title>
+<title>Age Check Exercise</title>
 </head>
 <body>	
 		<div th:if="${age} &lt; 17">
