--- a/messages/src/main/resources/templates/hello.html
+++ b/messages/src/main/resources/templates/hello.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	
- <h1 th:text="'Helloooo ' + ${name}"></h1>
+ <h1 th:text="'Hello ' + ${thymeName} + ' ID is: ' + ${thymeID}"></h1>
+ <h2 th:text="'ID '    + ${thymeID}"></h2>
 </body>
 </html>
