--- a/BookStore/src/main/resources/templates/booklist.html
+++ b/BookStore/src/main/resources/templates/booklist.html
@@ -4,13 +4,12 @@
 <head>
 <title>Book List</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"
-	th:href="@{css/bootstrap.min.css}" />
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
 </head>
 <body class="bg-light">
 	<div class="container">
 		<br>
-		<h1>Add</h1>
+		<h1>Books</h1>
 		<br>
 		<table class="table table-striped">
 			<tr>
@@ -19,7 +18,9 @@
 				<th>Year</th>
 				<th>Price</th>
 				<th>ISBN</th>
+				<th>Category</th>
 				<th></th>
+				<!-- These empty tags are for the bootstrap styling because of Delete and Modify buttons-->
 				<th></th>
 			</tr>
 			<tr th:each="book: ${books}">
@@ -28,10 +29,9 @@
 				<td th:text="${book.year}"></td>
 				<td th:text="${book.price}"></td>
 				<td th:text="${book.isbn}"></td>
-				<td><a th:href="@{/delete/{id}(id=${book.id})}"
-					class="btn btn-danger">Delete</a></td>
-				<td><a th:href="@{/modify/{id}(id=${book.id})}"
-					class="btn btn-warning">Modify</a></td>
+				<td th:text="${book.category.name}"></td>
+				<td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
+				<td><a th:href="@{/modify/{id}(id=${book.id})}" class="btn btn-warning">Modify</a></td>
 			</tr>
 		</table>
 		<a href="/add" class="btn btn-success">Add Book</a>
