--- a/BookStore/src/main/resources/templates/modifybook.html
+++ b/BookStore/src/main/resources/templates/modifybook.html
@@ -42,7 +42,7 @@
 
 				</select> 
 				<input class="btn btn-outline-dark" type="submit" value="Save"></input> 
-				<a href="/list" class="btn btn-outline-dark">Cancel</a>
+				<a href="/home" class="btn btn-outline-dark">Cancel</a>
 			</form>
 
 		</div>
