--- a/BookStore/src/main/resources/templates/index.html
+++ b/BookStore/src/main/resources/templates/index.html
@@ -29,6 +29,7 @@
 				<!-- These empty tags are for the bootstrap styling because of Delete and Modify buttons
 				/* -->
 				<th></th>
+				<th></th>
 			</tr>
 			<tr th:each="book: ${books}">
 				<td th:text="${book.author}"></td>
@@ -38,7 +39,7 @@
 				<td th:text="${book.isbn}"></td>
 				<td th:text="${book?.category?.name}"></td>
 				<!-- the ? mark above fixed the issue of null categories which caused the home html crash because this didn't know how to handle null values -->
-				<td sec:authorize="hasRole('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
+				<td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
 				<td><a th:href="@{/modify/{id}(id=${book.id})}" class="btn btn-warning">Modify</a></td>
 			</tr>
 		</table>
