--- a/BookStore/src/main/resources/templates/modifybook.html
+++ b/BookStore/src/main/resources/templates/modifybook.html
@@ -11,37 +11,54 @@
 		<h2>Modify</h2>
 		<div>
 
-			<form th:object="${book}" th:action="@{../save}" action="#" method="post">
+			<form th:object="${book}" th:action="@{../save}" action="#"
+				method="post">
 
-				<label for="id"></label> <input type="hidden" id="id" th:field="*{id}" readonly="readonly" />
+				<label for="id"></label>
+				<input type="hidden" id="id" th:field="*{id}" readonly="readonly" />
 
 				<div class="form-group">
-					<label for="author">Author</label> <input type="text" class="form-control" id="author" th:field="*{author}" aria-describedby="AuthorHelp" placeholder="Author" />
+					<label for="author">Author</label>
+					<input type="text" class="form-control" id="author"
+						th:field="*{author}" aria-describedby="AuthorHelp"
+						placeholder="Author" />
 				</div>
 
 				<div class="form-group">
-					<label for="title">Title</label> <input type="text" class="form-control" id="title" th:field="*{title}" aria-describedby="emailHelp" placeholder="Title" />
+					<label for="title">Title</label>
+					<input type="text" class="form-control" id="title"
+						th:field="*{title}" aria-describedby="emailHelp"
+						placeholder="Title" />
 				</div>
 
 				<div class="form-group">
-					<label for="year">Year</label> <input type="number" class="form-control" id="year" th:field="*{year}" />
+					<label for="year">Year</label>
+					<input type="number" class="form-control" id="year"
+						th:field="*{year}" />
 				</div>
 
 
 				<div class="form-group">
-					<label for="isbn">ISBN</label> <input type="text" class="form-control" id="isbn" th:field="*{isbn}" />
+					<label for="isbn">ISBN</label>
+					<input type="text" class="form-control" id="isbn"
+						th:field="*{isbn}" />
 				</div>
 
 				<div class="form-group">
-					<label for="price">Price</label> <input type="text" class="form-control" id="price" th:field="*{price}" />
+					<label for="price">Price</label>
+					<input type="text" class="form-control" id="price"
+						th:field="*{price}" />
 				</div>
 
-				<label for="catlist">Category</label> <select id="catlist" th:field="*{category.categoryid}" class="form-control">
+				<label for="catlist">Category</label>
+				<select id="catlist" th:field="*{category.categoryid}"
+					class="form-control">
 
-					<option th:each="cat: ${categories}" th:value="${cat.categoryid}" th:text="${cat.name}"></option>
+					<option th:each="cat: ${categories}" th:value="${cat.categoryid}"
+						th:text="${cat.name}"></option>
 
-				</select> 
-				<input class="btn btn-outline-dark" type="submit" value="Save"></input> 
+				</select>
+				<input class="btn btn-outline-dark" type="submit" value="Save"></input>
 				<a href="/" class="btn btn-outline-dark">Cancel</a>
 			</form>
 
